--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -14,4 +14,9 @@
                 background: #fff;
                 @include easeout;
         }
+
+        //Rotate into X with Menu Lines
+        &.close{
+                transform:  rotate(180deg);
+        }
 }
