--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -17,6 +17,26 @@
 
         //Rotate into X with Menu Lines
         &.close{
-                transform:  rotate(180deg);
+                transform :  rotate(180deg);
+
+                .btn-line{
+                        //Line 1 - Rotate
+                        &:nth-child(1){
+                                transform:rotate(45deg) translate(5px,5px);
+                        }
+
+                        //Line 2 - Hide
+                        &:nth-child(2){
+                               opacity: 0;
+                        }
+
+                        //Line 3
+
+                        &:nth-child(3){
+                                transform:rotate(-45deg) translate(6px,-6px);
+                        }
+
+
+                }
         }
 }
