--- a/scss/main.scss
+++ b/scss/main.scss
@@ -125,6 +125,17 @@ main{
         }
 }
 
+// Work/Projects
+.projects {
+        display: grid;
+
+       .item{
+                img {
+                width: 100%;
+        }
+       }
+}
+
 #main-footer{
         text-align:center;
         padding: 1rem;
