git commit -m "Added Work"

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,15 @@
 //WideScreens
 @include mediaXL{
-
+        .projectwork {
+                grid-template-columns: repeat(4, 1fr);
+        }
 }
 
 //Desktop &Laptops
 @include mediaLg{
-
+         .projectwork {
+                grid-template-columns: repeat(3, 1fr);
+        }
 }
 
 //Tablets & Small Laptops
@@ -61,6 +65,10 @@
 
                 grid-template-columns: 1fr;
         }
+
+         .projectwork {
+                grid-template-columns: repeat(2, 1fr);
+        }
 }
 
 //SmartPhones
@@ -69,6 +77,8 @@
                 margin-top:10vh;
         }
         
-        
+         .projectwork {
+                grid-template-columns:  1fr;
+        }
         
 }
